Refine student message teacher recipients